Fix padding of minuet-bold via line-height
The line-height of 0 essentially set the height to basically nothing therefore it had absolutely no padding and felt squashed, the text exceeded the bounds of the minuet.

With it being changed to 10 (and not normal) it's specifically enough to be padded and fit the text comfily, but not so much as to stretch the containers bounds.

--- a/user.css
+++ b/user.css
@@ -421,7 +421,7 @@ h3,
   letter-spacing: 0px;
   font-weight: 400;
   font-size: 14px;
-  line-height: 0px;
+  line-height: 10px;
 }
 
 .main-shelf-seeAll {
